# Creare

./: .clang-format  .gitignore  CMakeLists.txt  README.md  b.sh  meson.build  unix_build.sh
.cache/clangd/index/: main.c.118B3F659D126D07.idx
inc/: binary.h  cursor.h  font.h  gfx.h  grid.h  input.h  render.h  vectors.h  window.h
src/: binary.c  font.c  gfx.c  input.c  main.c  render.c  renderer.c  window.c
